# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  pyci.yml
gendiff/: __init__.py  cli.py  diff.py  engine.py  formatter.py  gendiff.py  markers.py  parsers.py
gendiff/formatters/: json.py  output.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/views/: __init__.py  json.py  plain.py  stylish.py  view.py
tests/: test_diff.py  test_json.py
tests/fixtures/: empty_file  flat_diff_result  json_diff_result
