[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Project Generate Diffirence on www.hexlet.io"
authors = ["li0n0k <li0n0m0nk@gmail.com>"]
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Topic :: Education",
  "Programming Language :: Python",
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
